--- a/app/src/main/res/layout/activity_camera_intent.xml
+++ b/app/src/main/res/layout/activity_camera_intent.xml
@@ -9,16 +9,464 @@
     tools:context="pl.mazek.robotcontroll.CameraIntentActivity">
 
     <TextureView
+        android:layout_width="600dp"
+        android:id="@+id/textureView"
+        android:layout_height="400dp" />
+
+    <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:id="@+id/textureView"/>
-
-
-    <Button
-        android:text="OK"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/analiseButton" />
+        android:id="@+id/gridLayout"
+        android:columnCount="13"
+        android:rowCount="9">
+        <Button
+            android:text="OK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/analiseButton"
+            android:layout_rowSpan="9"
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U1"-->
+            <!--android:layout_row="0"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U2"-->
+            <!--android:layout_row="0"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U3"-->
+            <!--android:layout_row="0"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U4"-->
+            <!--android:layout_row="1"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U5"-->
+            <!--android:layout_row="1"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U6"-->
+            <!--android:layout_row="1"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U7"-->
+            <!--android:layout_row="2"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U8"-->
+            <!--android:layout_row="2"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#FFEB3B"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/U9"-->
+            <!--android:layout_row="2"-->
+            <!--android:layout_column="6" />-->
+
+
+        <!--&lt;!&ndash;R&ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R1"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="7"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R2"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="8" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R3"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="9" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R4"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="7"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R5"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="8" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R6"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="9" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R7"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="7"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R8"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="8" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_blue_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/R9"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="9" />-->
+
+        <!--&lt;!&ndash;F&ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F1"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F2"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F3"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F4"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F5"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F6"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F7"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F8"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_orange_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/F9"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="6" />-->
+
+        <!--&lt;!&ndash;D&ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D1"-->
+            <!--android:layout_row="6"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D2"-->
+            <!--android:layout_row="6"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D3"-->
+            <!--android:layout_row="6"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D4"-->
+            <!--android:layout_row="7"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D5"-->
+            <!--android:layout_row="7"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D6"-->
+            <!--android:layout_row="7"-->
+            <!--android:layout_column="6" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D7"-->
+            <!--android:layout_row="8"-->
+            <!--android:layout_column="4"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D8"-->
+            <!--android:layout_row="8"-->
+            <!--android:layout_column="5" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/white"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/D9"-->
+            <!--android:layout_row="8"-->
+            <!--android:layout_column="6" />-->
+
+        <!--&lt;!&ndash;B&ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B1"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="10"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B2"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="11" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B3"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="12" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B4"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="10"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B5"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="11" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B6"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="12" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B7"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="10"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B8"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="11" />-->
+
+        <!--<ImageView-->
+            <!--android:src="@android:color/holo_red_dark"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/B9"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="12" />-->
+
+        <!--&lt;!&ndash;L&ndash;&gt;-->
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L1"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="1"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L2"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="2" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L3"-->
+            <!--android:layout_row="3"-->
+            <!--android:layout_column="3" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L4"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="1"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L5"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="2" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L6"-->
+            <!--android:layout_row="4"-->
+            <!--android:layout_column="3" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L7"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="1"/>-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L8"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="2" />-->
+
+        <!--<ImageView-->
+            <!--android:src="#4CAF50"-->
+            <!--android:layout_width="10dp"-->
+            <!--android:layout_height="10dp"-->
+            <!--android:id="@+id/L9"-->
+            <!--android:layout_row="5"-->
+            <!--android:layout_column="3" />-->
+
+    </GridLayout>
 
     <LinearLayout
         android:orientation="horizontal"
